# spotdl-cask

./: .gitignore  README.md  app.py  build-macos-app.sh  build-macos-dmg.sh  config.py  dev  downloader.py  lint  lint-fix  package-lock.json  package.json  project_meta.py  pyproject.toml  requirements.txt  run  setup  spotdl_gui.py  spotify_client.py  test  typecheck
app/: __init__.py  binaries.py  diagnostics.py  pickers.py  routes.py  runtime.py  settings.py  web.py
app/backend/: __init__.py  download_worker.py  inputs.py  jobs.py  media.py  metadata.py  metadata_worker.py  os.py  protocol.py  settings.py  spotify.py  workers.py
app/services/: __init__.py  downloads.py  spotify.py
assets/macos/: spotdl-web-downloader.icns
build-test/spotDL Web Downloader/: Analysis-00.toc  COLLECT-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-spotDL Web Downloader.txt
dist-test/spotDL Web Downloader.app/Contents/: Info.plist
static/css/: style.css
static/css/sections/: feedback.css  layout.css  modes.css  panels.css  table.css  tokens.css
static/js/: app.js
static/js/modules/: api.js  appearance.js  bootstrap.js  constants.js  controls.js  dom.js  downloads.js  links.js  rows.js  selection.js  state.js  (+2 more)
templates/: index.html
tests/: test_app_routes.py  test_backend_download_worker.py  test_backend_jobs.py  test_backend_settings.py  test_backend_workers.py  test_download_services.py  test_fallback_download_input.py  test_logging_filter.py  test_metadata_and_reveal.py  test_routes.py  test_runtime_ffmpeg.py  test_settings_store.py
tools/: generate_macos_icon.py
(+7 files in other folders)
