[project]
name = "spotdl-cask"
version = "0.1.0"
description = "spotDL Web Downloader desktop app"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "flask==3.1.3",
    "pywebview==6.1",
    "spotdl",
]

[tool.uv.sources]
spotdl = { git = "https://github.com/TzurSoffer/spotify-downloader.git" }
